# test_mvp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  integration_test.py  pyproject.toml  pytest.ini
booking/: admin.py  cron.py  models.py  pagination.py  routers.py  serializers.py  urls.py  views.py
booking/management/commands/: check_partitions.py
booking/migrations/: 0001_initial.py
booking/partitioning/: manager.py
project/: settings.py  urls.py
tests/: conftest.py  test_booking.py
